--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "express": "^4.15.4",
+    "history": "^4.7.2",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-native": "^0.48.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
